[gd_scene load_steps=27 format=3 uid="uid://c2lyuuos4t0d7"]

[ext_resource type="Script" path="res://CutScenes/intro_animatic.gd" id="1_642u7"]
[ext_resource type="Texture2D" uid="uid://b0e1cshdxfpku" path="res://art/player/cyber-ronin.png" id="1_xlbbx"]
[ext_resource type="Texture2D" uid="uid://dgxtephsvaqsu" path="res://art/background/parallax-city-scape.png" id="2_ans8i"]
[ext_resource type="Texture2D" uid="uid://bwbcyc2p84yws" path="res://art/props/shipping_container_ill_eagle.png" id="2_asvyr"]
[ext_resource type="Texture2D" uid="uid://ckpwl45q4au14" path="res://art/background/title-sequence-background.png" id="3_cu010"]
[ext_resource type="Texture2D" uid="uid://u8jvbcoi3o7u" path="res://art/props/shipping_container_ice_and_freezy.png" id="3_n5ip3"]
[ext_resource type="Texture2D" uid="uid://qcigtg1vltun" path="res://art/props/shipping_container_bengal_security.png" id="4_dco4t"]
[ext_resource type="Texture2D" uid="uid://bya7ftvd8l5sk" path="res://art/UI/Title/ship.png" id="5_lhuvj"]
[ext_resource type="Texture2D" uid="uid://drt1ko3obj4xo" path="res://art/Enemies/Cyber-Boss/cyber-boss-Sheet.png" id="6_4yala"]
[ext_resource type="FontFile" uid="uid://danlaalj0k3dj" path="res://UI/Themes/fonts/Saira/Saira-BoldItalic.ttf" id="8_5k53j"]
[ext_resource type="Texture2D" uid="uid://uurcp3ihfr4i" path="res://art/UI/Title/today-he-dies.png" id="9_g2bo7"]
[ext_resource type="Texture2D" uid="uid://uy6fad2k4nb3" path="res://art/UI/Title/in.png" id="10_x82pu"]
[ext_resource type="Texture2D" uid="uid://b6ktq6moexioo" path="res://art/UI/Title/panel.png" id="11_nf0qc"]
[ext_resource type="Texture2D" uid="uid://bwnbumcecneus" path="res://art/UI/Title/manifest-violence-animated.png" id="11_qmvf4"]
[ext_resource type="PackedScene" uid="uid://dm0h5iyg1t6xj" path="res://UI/Title/start-button.tscn" id="12_73lfk"]
[ext_resource type="PackedScene" uid="uid://dwd8f536qu5go" path="res://UI/Title/skip_tutorial_button.tscn" id="13_66hro"]
[ext_resource type="AudioStream" uid="uid://ditqh6y1ovspx" path="res://audio/sfx/placeholder/button_press.wav" id="17_arteh"]
[ext_resource type="AudioStream" uid="uid://ccn60h0iwfwbg" path="res://audio/sfx/placeholder/button_hover.wav" id="18_nlg1c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pos6s"]
bg_color = Color(0, 0, 0, 1)
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0
shadow_size = 5
shadow_offset = Vector2(2, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_chbwq"]
atlas = ExtResource("11_qmvf4")
region = Rect2(0, 0, 318, 172)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1amt"]
atlas = ExtResource("11_qmvf4")
region = Rect2(318, 0, 318, 172)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1dp2"]
atlas = ExtResource("11_qmvf4")
region = Rect2(636, 0, 318, 172)

[sub_resource type="SpriteFrames" id="SpriteFrames_nr6j4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_chbwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1amt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1dp2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_m453i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slide1-Me:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Slide2-Workplace:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Slide1-Me:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Slide2-Workplace:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Camera2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Slide4-TitleMenu:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Slide4-TitleMenu/ManifestLabel:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Slide4-TitleMenu/in:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Slide4-TitleMenu/in:self_modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("PressAnyKeyLabel:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Camera2D/escToSkipLabel:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Camera2D/escToSkipLabel:self_modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Slide1-Me/ThisIsMeLabel:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("ManifestViolence:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Slide4-TitleMenu/Control-Panel/ButtonPanel:self_modulate")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Slide4-TitleMenu/Control-Panel/ButtonPanel/TutorialButton:self_modulate")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("Slide4-TitleMenu/Control-Panel/ButtonPanel/SkipTutorialButton:self_modulate")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_sqojr"]
resource_name = "intro_animatic"
length = 12.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slide1-Me:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Slide2-Workplace:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Slide1-Me:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Slide2-Workplace:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Camera2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(4, 6.2, 7.3, 8.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -742), Vector2(0, -742), Vector2(2.08165e-12, -980)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Slide4-TitleMenu:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 8.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Slide4-TitleMenu/ManifestLabel:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(6.2, 9.3, 9.9, 10.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Slide4-TitleMenu/in:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(8.6, 9.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Slide4-TitleMenu/in:self_modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(9.4, 9.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("PressAnyKeyLabel:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Camera2D/escToSkipLabel:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 8.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Camera2D/escToSkipLabel:self_modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(2, 3.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Slide1-Me/ThisIsMeLabel:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("ManifestViolence:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Slide4-TitleMenu/Control-Panel/ButtonPanel:self_modulate")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(11.1, 12),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Slide4-TitleMenu/Control-Panel/ButtonPanel/TutorialButton:self_modulate")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(11.1, 12),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("Slide4-TitleMenu/Control-Panel/ButtonPanel/SkipTutorialButton:self_modulate")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(11.1, 12),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_23747"]
_data = {
"RESET": SubResource("Animation_m453i"),
"intro_animatic": SubResource("Animation_sqojr")
}

[node name="IntroAnimatic" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_642u7")
metadata/_edit_vertical_guides_ = []

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(181.5, -818.5)
texture = ExtResource("2_ans8i")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(306, -330)
texture = ExtResource("3_cu010")

[node name="Slide1-Me" type="Node2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)

[node name="PlayerSprite" type="Sprite2D" parent="Slide1-Me"]
position = Vector2(69, 67.5)
texture = ExtResource("1_xlbbx")

[node name="ThisIsMeLabel" type="Label" parent="Slide1-Me"]
offset_left = 19.0
offset_top = 27.0
offset_right = 113.0
offset_bottom = 53.0
text = "This is Me."

[node name="Slide2-Workplace" type="Node2D" parent="."]
visible = false

[node name="Ship" type="Sprite2D" parent="Slide2-Workplace"]
position = Vector2(258, 160)
scale = Vector2(2, 2)
texture = ExtResource("5_lhuvj")

[node name="Evil Corp" type="Label" parent="Slide2-Workplace/Ship"]
visible = false
offset_left = 215.0
offset_top = 122.0
offset_right = 316.0
offset_bottom = 159.0
theme_override_colors/font_color = Color(0, 0, 0, 0.521569)
theme_override_font_sizes/font_size = 24
text = "Evil Corp"

[node name="MegaShip" type="Label" parent="Slide2-Workplace/Ship"]
visible = false
offset_left = 160.0
offset_top = 154.0
offset_right = 365.0
offset_bottom = 180.0
theme_override_colors/font_color = Color(0, 0, 0, 0.521569)
text = "MegaShip - HN83725"

[node name="ShippingContainers" type="Node2D" parent="Slide2-Workplace"]

[node name="Sprite2D3" type="Sprite2D" parent="Slide2-Workplace/ShippingContainers"]
position = Vector2(262.5, -240)
scale = Vector2(0.75, 0.75)
texture = ExtResource("4_dco4t")

[node name="Sprite2D4" type="Sprite2D" parent="Slide2-Workplace/ShippingContainers"]
position = Vector2(269, -96)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_asvyr")

[node name="Sprite2D5" type="Sprite2D" parent="Slide2-Workplace/ShippingContainers"]
position = Vector2(272.5, 48.5)
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_n5ip3")

[node name="Sprite2D10" type="Sprite2D" parent="Slide2-Workplace/ShippingContainers"]
position = Vector2(264, -384)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_asvyr")

[node name="Sprite2D12" type="Sprite2D" parent="Slide2-Workplace/ShippingContainers"]
position = Vector2(269, -526)
scale = Vector2(0.75, 0.75)
texture = ExtResource("4_dco4t")

[node name="Panel" type="PanelContainer" parent="Slide2-Workplace"]
visible = false
offset_left = 111.0
offset_top = 1.0
offset_right = 207.0
offset_bottom = 53.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_pos6s")

[node name="WorkplaceLabel" type="Label" parent="Slide2-Workplace"]
custom_minimum_size = Vector2(96, 2.08165e-12)
offset_left = 138.5
offset_top = 16.5
offset_right = 234.5
offset_bottom = 68.5
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
text = "This is my workplace"
autowrap_mode = 2

[node name="Slide3" type="Node2D" parent="."]

[node name="Boss" type="Sprite2D" parent="Slide3"]
position = Vector2(170.5, -666)
scale = Vector2(1.5, 1.5)
texture = ExtResource("6_4yala")

[node name="Label" type="Label" parent="Slide3"]
offset_left = 42.0
offset_top = -723.0
offset_right = 159.0
offset_bottom = -697.0
text = "This is my Boss"

[node name="Slide4-TitleMenu" type="Node2D" parent="."]
visible = false

[node name="ThreatLabel" type="TextureRect" parent="Slide4-TitleMenu"]
offset_left = 52.5
offset_top = -977.5
offset_right = 264.5
offset_bottom = -949.5
texture = ExtResource("9_g2bo7")

[node name="in" type="TextureRect" parent="Slide4-TitleMenu"]
visible = false
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 152.0
offset_top = -948.5
offset_right = 183.0
offset_bottom = -920.5
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_x82pu")

[node name="Control-Panel" type="Node2D" parent="Slide4-TitleMenu"]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(9, -5)

[node name="ButtonPanel" type="Sprite2D" parent="Slide4-TitleMenu/Control-Panel"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
position = Vector2(155.5, -846)
texture = ExtResource("11_nf0qc")

[node name="TutorialButton" parent="Slide4-TitleMenu/Control-Panel/ButtonPanel" instance=ExtResource("12_73lfk")]
self_modulate = Color(1, 1, 1, 0)
offset_left = -101.5
offset_top = -14.5
offset_right = -28.5
offset_bottom = 16.5
focus_neighbor_right = NodePath("../SkipTutorialButton")

[node name="SkipTutorialButton" parent="Slide4-TitleMenu/Control-Panel/ButtonPanel" instance=ExtResource("13_66hro")]
self_modulate = Color(1, 1, 1, 0)
offset_left = -5.0
offset_top = -23.999
offset_right = 97.0
offset_bottom = 23.001
focus_neighbor_left = NodePath("../TutorialButton")

[node name="ManifestLabel" type="AnimatedSprite2D" parent="Slide4-TitleMenu"]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(160.5, -921)
sprite_frames = SubResource("SpriteFrames_nr6j4")
autoplay = "default"
frame_progress = 0.635124

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_23747")
}

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="escToSkipLabel" type="Label" parent="Camera2D"]
offset_left = 257.5
offset_top = 162.5
offset_right = 351.5
offset_bottom = 188.5
scale = Vector2(0.643808, 0.643808)
text = "...esc to skip"

[node name="PressAnyKeyLabel" type="Label" parent="."]
offset_left = 1.0
offset_top = 155.5
offset_right = 120.0
offset_bottom = 181.5
text = "Press any key..."

[node name="ManifestViolence" type="Label" parent="."]
offset_left = 15.0
offset_top = 91.0
offset_right = 293.0
offset_bottom = 133.0
rotation = -0.241822
theme_override_fonts/font = ExtResource("8_5k53j")
theme_override_font_sizes/font_size = 32
text = "Manifest Violence"

[node name="Audio" type="Node" parent="."]

[node name="ClickNoise" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("17_arteh")

[node name="HoverNoise" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("18_nlg1c")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
